--- a/data_sharing/templates/layout.html
+++ b/data_sharing/templates/layout.html
@@ -1,5 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
 <head>
+  {% block head %}
   <title>Data Sharing Platform</title>
-  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
+  {% endblock %}
 </head>
+<body>{% block content %}{% endblock %}</body>
+</html>
