--- a/data_sharing/templates/main.html
+++ b/data_sharing/templates/main.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
-{% block body %}
+{% block content %}
   <h2>Main Page</h2>
   {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
+  
+ <p>{{data}} HI</p>
 {% endblock %}
+
