added leaflet maps with different projections

--- a/data_sharing/static/css/style.css
+++ b/data_sharing/static/css/style.css
@@ -3,5 +3,16 @@ h1{
 }
 
 body{
-	background-color: grey;
+	background-color: lightgrey;
+}
+
+
+#llmap {
+    height: 400px;
+     width: 800px;
+ }
+
+ #mapContainer {
+   height: 400px;
+     width: 800px;
 }
