--- a/data_sharing/templates/layout.html
+++ b/data_sharing/templates/layout.html
@@ -3,8 +3,11 @@
 <head>
   {% block head %}
   <title>Data Sharing Platform</title>
-  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
   {% endblock %}
 </head>
-<body>{% block content %}{% endblock %}</body>
+<body>{% block content %}{% endblock %}
+</body>
 </html>
