--- a/data_sharing/templates/main.html
+++ b/data_sharing/templates/main.html
@@ -1,8 +1,24 @@
 {% extends "layout.html" %}
+{% block head %}
+    <script src="{{url_for('static', filename='js/jquery.js')}}"></script>
+    <script src="{{url_for('static', filename='leaflet/leaflet.js')}}"></script>
+    <script src="{{url_for('static', filename='js/proj4.js')}}"></script>
+    <script src="{{url_for('static', filename='js/proj4leaflet.js')}}"></script>
+    <link rel="stylesheet" href="{{url_for('static', filename='css/polarmap.css')}}"/>
+    <link rel="stylesheet" href="{{url_for('static', filename='leaflet/leaflet.css')}}">
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
+{% endblock %}
 {% block content %}
+<div class="container">
   <h2>Main Page</h2>
   {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
   
  <p>{{data}} HI</p>
+ </div>
+ <div id="llmap"></div>
+ 
+ <div id="mapContainer"></div>
+ 
+ <script src="{{url_for('static', filename='js/map.js')}}"></script>
 {% endblock %}
 
