--- a/data_sharing/static/css/style.css
+++ b/data_sharing/static/css/style.css
@@ -6,13 +6,25 @@ body{
 	background-color: lightgrey;
 }
 
+.footertext{
+	
+	text-align: center;
+	float: none;
+}
 
-#llmap {
-    height: 400px;
-     width: 800px;
- }
+.navbar-text{
+	color: white;
+}
 
- #mapContainer {
-   height: 400px;
-     width: 800px;
+#footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    background-color: #343a40;
+    color: white;
+    text-align: center;
+    font-size: 90%;
+    padding-top: 0.3%;
 }
