--- a/data_sharing/templates/layout.html
+++ b/data_sharing/templates/layout.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  {% block head %}
   <title>Data Sharing Platform</title>
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favi.ico') }}" type="image/x-icon">
 
-  {% endblock %}
+  <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+
+
+
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
+
+
+
+  {% block head %}{% endblock %}
 </head>
-<body>{% block content %}{% endblock %}
+<body>
+
+<!-- Navbar comes here -->
+<nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+  <a class="navbar-brand" href="#">IceExplorer <img src="{{ url_for('static', filename='img/logo.png') }}" style="height: 30px;"> |</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+       <li class="nav-item">
+        <a class="nav-link" href="#">Map</a>
+      </li>   
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>   
+    </ul>
+  </div>  
+</nav>
+<div style="padding: 28px;"></div>
+
+{% block content %}{% endblock %}
+
+<div id="footer">Map created by Livia Jakob | 2018
+</div>
+
 </body>
 </html>
