--- a/data_sharing/static/css/style.css
+++ b/data_sharing/static/css/style.css
@@ -6,6 +6,11 @@ body{
 	background-color: darkgrey;
 }
 
+hr{
+	padding: 1px;
+	margin: 1px;
+}
+
 .footertext{
 	
 	text-align: center;
@@ -43,10 +48,10 @@ body{
 	width: 100%;
     height: 100%;
 	direction: rtl;
-	padding-left: 20px;
+	padding-left: 13px;
 	padding-bottom: 20px;
 	padding-top: 20px;
-	padding-right: 20px;
+	padding-right: 13px;
 	overflow-y: auto;
 }
 
@@ -54,3 +59,65 @@ body{
 	position:relative;
 }
 
+#datasets-content{
+	position:relative;
+	width: 100%;
+    height: 220px;
+    overflow-y: scroll;
+    //background-color: darkgrey;
+    padding: 5px;
+    font-size: 13px;
+	direction:ltr;
+}
+
+.text{
+	padding-left: 7px;
+	padding-right: 7px;
+}
+
+
+#datasets{
+	position:relative;
+	border: 1px solid black;
+    border-radius: 5px;
+    padding: 5px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    direction:ltr;
+}
+
+
+#scroll-icon{
+	position: absolute;
+	bottom: 20px;
+	right: 7px;
+}
+
+#total-result{
+	margin-left: 3px;
+	margin-bottom: 3px;
+}
+
+#datasets-list{
+	background-color: lightgrey;
+}
+
+
+#myInput {
+  width: 100%;
+  font-size: 16px;
+  padding: 3px;
+  padding-left: 6px;
+  border: 1px solid #ddd;
+  margin-bottom: 8px;
+  margin-top: 3px;
+  font-size: 12px;
+}
+
+.small{
+	font-size: 12px;
+}
+
+#datasets-bar{
+	margin: 4px;
+}
