--- a/data_sharing/templates/main.html
+++ b/data_sharing/templates/main.html
@@ -37,23 +37,65 @@
     <div id="datasets-content">
     
     <div id="total-result"></div>
+    
     <table id="myTable" class="table table-hover">
     <tbody id="datasets-list" >
     </tbody></table></div>
         <div id="scroll-icon">&#8597;</div>
     </div>
      <div id="checkbox">
-	<input type="checkbox" id="visible" checked> Toggle Layer Visibility
+	<input type="checkbox" id="visible" checked> Toggle Layer Visibility	
 	</div>
-	
 	
 	<div class="text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget laoreet justo. Morbi feugiat purus velit, at feugiat quam vestibulum id. Morbi a finibus orci. Mauris non mi rhoncus, accumsan erat sed, blandit turpis. Fusce tincidunt maximus risus, sit amet fermentum sapien accumsan nec. Donec consequat sollicitudin nisi sit amet cursus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur ullamcorper condimentum aliquam. Pellentesque volutpat pulvinar enim. Morbi accumsan vestibulum volutpat.
 Vestibulum ut lectus lacus. Sed enim diam, rutrum at maximus suscipit, consequat in metus. Fusce nec ipsum nec nisi mattis porta ac vitae quam. Pellentesque viverra sapien augue, nec tincidunt purus volutpat vitae. Aliquam vitae scelerisque nibh, quis maximus massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus vitae felis metus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras a tortor id arcu sollicitudin aliquet. Ut a accumsan ex. Nullam fermentum quam non odio volutpat rhoncus. Praesent tincidunt, justo at euismod elementum, felis lectus vehicula lectus, vitae dapibus quam odio dictum ex. Morbi imperdiet sem eget risus ultrices, sed cursus sapien pellentesque. Etiam eleifend mattis quam ut posuere. Nullam eget tincidunt nisl.
 Aenean pharetra dignissim est, non placerat massa semper vitae. Duis et est mauris. Proin pretium ut massa ut finibus. Aliquam aliquet sodales magna vel sollicitudin. Etiam interdum, ex in tincidunt fringilla, felis nisl convallis arcu, sed placerat mi nisi vitae neque. Quisque at aliquet enim. Sed ornare ipsum et ligula sagittis, quis vestibulum augue luctus. Nullam id rhoncus ante, at euismod nulla. Quisque consequat ultrices dolor eget tristique. Mauris porta tellus ut tellus aliquet, non pellentesque sem ultrices. Ut pretium, velit in ultricies malesuada, sapien urna tempus velit, sit amet mollis ante enim elementum purus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Interdum et malesuada fames ac ante ipsum primis in faucibus.
 
 <div id="attribution">Attribution: </div>
-
+<div class='hov'>this</div>
 	</div>
+	
+	
+		
+	<table>
+  <tr>
+    <th>Company</th>
+    <th>Contact</th>
+    <th>Country</th>
+  </tr>
+  <tr>
+    <td class='hov'>Alfreds Futterkiste</td>
+    <td class='hov'>Maria Anders</td>
+    <td class='hov'>Germany</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+  <tr>
+    <td>Ernst Handel</td>
+    <td>Roland Mendel</td>
+    <td>Austria</td>
+  </tr>
+  <tr>
+    <td>Island Trading</td>
+    <td>Helen Bennett</td>
+    <td>UK</td>
+  </tr>
+  <tr>
+    <td>Laughing Bacchus Winecellars</td>
+    <td>Yoshi Tannamuri</td>
+    <td>Canada</td>
+  </tr>
+  <tr>
+    <td>Magazzini Alimentari Riuniti</td>
+    <td>Giovanni Rovelli</td>
+    <td>Italy</td>
+  </tr>
+</table>
+	
+	
     </div> <!-- end side-content -->
     </div> <!-- end side -->
     
