--- a/data_sharing/static/css/style.css
+++ b/data_sharing/static/css/style.css
@@ -1,9 +1,11 @@
-h1{
-    color: aqua;
+h1, h2, h3, h4, h5, h6{
+    font-family: 'PT Serif', serif;
+    font-weight: bold;
 }
 
 body{
-	background-color: darkgrey;
+	background-color: rgba(95,158,160,0.6);
+	font-family: 'Raleway', sans-serif;
 }
 
 hr{
@@ -43,6 +45,7 @@ hr{
 	width: 250px;
     height: 100%;
     float: left;
+    background-color: rgba(61, 100, 102,0.6);
 }
 
 #side-content{
@@ -60,6 +63,7 @@ hr{
 #attribution{
 	position:relative;
 }
+
 
 #datasets-content{
 	position:relative;
@@ -87,6 +91,7 @@ hr{
     margin-bottom: 10px;
     margin-top: 10px;
     direction:ltr;
+    background-color: darkgrey;
 }
 
 
