--- a/data_sharing/templates/layout.html
+++ b/data_sharing/templates/layout.html
@@ -12,7 +12,8 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
 	
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
-
+<link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
 
 {% block head %}{% endblock %}
 </head>
