--- a/data_sharing/templates/layout.html
+++ b/data_sharing/templates/layout.html
@@ -21,7 +21,7 @@
 
 <!-- Navbar comes here -->
 <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-  <a class="navbar-brand" href="#">IceExplorer <img src="{{ url_for('static', filename='img/logo.png') }}" style="height: 30px;"> |</a>
+  <a class="navbar-brand" href="#" style="font-family: 'PT Serif', serif; padding-left:55px;">IceExplorer <img src="{{ url_for('static', filename='img/logo.png') }}" style="height: 30px;"> |</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
