--- a/data_sharing/static/css/map.css
+++ b/data_sharing/static/css/map.css
@@ -15,17 +15,6 @@
    margin-left: 250px;
 }
 
-.rotate-north {
-	top: 65px;
-	left: .5em;
-}
-.ol-touch .rotate-north {
-	top: 80px;
-}
-
-.ol-touch .rotate-north {
-	top: 80px;
-}
 
 .ol-scale-line{
 
@@ -99,7 +88,7 @@
 
 #infobox{
 	position:absolute;
-	top: 50px;
+	top: 9px;
 	left: -moz-calc(100% - 250px);
  	left: -webkit-calc(100% - 250px);
  	left: calc(100% - 250px);
@@ -156,19 +145,216 @@
 }
  
  
+
+#toolbox{
+	position:absolute;
+	top: 68px;
+	left: 300px;
+ 	font-size: 12px;
+
+ 	background-clip: padding-box;
+ 	//height: 100px;
+ 	width: 170px;
+ 	display: none;
+ 	//border-radius: 7px;
+ 	
+ 	
+    margin: 0;
+    border: 3px solid rgba(255,255,255,0.5);
+    padding: 6px;
+    border-radius: 4px;
+    background-color: rgba(32,85,153,0.5);
+
+    color: white;
+    /*fix border opacity*/
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding;
+    background-clip: padding-box;
+}
+ 
+ 
+#toolbox .content {
+    padding: 5px;
+    opacity: 1;
+	color: white;
+}
+
+
+#toolbox hr { 
+	color: white;
+	border-color: white;
+	background-color: white;
+    margin-top: 6px;
+    margin-bottom: 0.5em;
+    border-width: 0.2px;
+    width: 162px;
+    opacity: 0.7;
+    margin-left:-11px;
+}
+
+#toolbox h6 { 
+	//padding-bottom: 1px;
+	margin-bottom: 2px;
+}
+
+
+#toggle-swipe{
+	float: left;
+    //width: 110px;
+    height: 30px;
+    border: 3px solid rgba(255,255,255,0.8);
+    background-image: url(../img/compare3.png);
+    background-size: 30px;
+    background-repeat: no-repeat;
+    background-position: 0.5px;
+    background-color: rgba(0,60,136,.5);
+    border-radius: 4px;
+    padding-left: 37px;
+    color:white;
+}
+
+#toggle-swipe:hover{
+	background-color: rgba(0,60,136,0.9);
+	cursor: pointer;
+}
+ 
+ 
+ 
+ 
+ 
+/* STYLE SLIDER */
  
  
 #swipe{
 	position: absolute;
-	top: -moz-calc(100% - 80px);
- 	top: -webkit-calc(100% - 80px);
- 	top: calc(100% - 80px);
-	left: 275px;
-	width: -moz-calc(100% - 300px);
-	width: -webkit-calc(100% - 300px);
-	width: -webkit-calc(100% - 300px);
+	top: -moz-calc(100% - 90px);
+ 	top: -webkit-calc(100% - 90px);
+ 	top: calc(100% - 90px);
+	left: 265px;
+	width: -moz-calc(100% - 280px);
+	width: -webkit-calc(100% - 280px);
+	width: calc(100% - 280px);
+	visibility: hidden;
+	//display: none;
 }
  
  
+.slider {
+    -webkit-appearance: none;
+    height: 15px;
+    border-radius: 5px;
+    background: rgb(32,85,153);
+    border: 2px solid rgb(255,255,255);
+    opacity: 0.5;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    cursor: pointer;
+}
+
+.slider:hover {
+    opacity: 0.8;
+}
+
+input[type=range] {
+  -webkit-appearance: none;
+}
+
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 2px solid rgb(255,255,255);
+  height: 40px;
+  width: 30px;
+  border-radius: 10%;
+  background-color: rgb(0,60,136);
+  background-size: 30px;
+  background-image: url(../img/compare3.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  color: rgb(0,60,136);
+}
+
+input[type="range"]::-moz-range-thumb {
+  border: 2px solid rgb(255,255,255);
+  height: 40px;
+  width: 30px;
+  border-radius: 10%;
+  background-color: rgb(0,60,136);
+  background-size: 30px;
+  background-image: url(../img/compare3.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  
+}
+
+
+/* END STYLE SLIDER */
+
+
+
+/* Controls */
+
+
+.ol-control button{ 
+    cursor: pointer !important;
+}
+
+.custom-reset{
+	color: black !important;
+	background-size: 20px;
+  	background-image: url(../img/refresh.png);
+    background-position: 0.32em;
+  	background-repeat: no-repeat;
+  	border-radius: 50% !important;
+  	height: 100% !important;
+  	width: 100% !important;
+  	margin: 0px !important;
+}
+
+.refresh-control {
+	top: 75px;
+	left: 0.4em;
+	border-radius: 50% !important;
+	height: 35px !important;
+	width: 35px !important;
+}
+.ol-touch .refresh-control {
+	top: 80px;
+}
+
+.ol-touch .refresh-control {
+	top: 80px;
+}
+
+
+
+
+
+.download{
+	position: absolute; right: 0;
+	//float: right;
+    //width: 110px;
+    //height: 20px;
+    border: 1px solid rgba(255,255,255,1);
+    border: none;
+    background-image: url(../img/download.svg);
+    background-size: 15px;
+    background-repeat: no-repeat;
+    background-position: 3px;
+    background-color: transparent;//rgba(0,60,136,.5);
+    //border-radius: 4px;
+    padding-left: 22px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    color: black;
+    margin-top: -2px;
+    margin-bottom: 0px;
+    margin-left: 5px;
+}
+
+.download:hover{
+	background-color: rgba(0,60,136,0.3);
+	cursor: pointer;
+}
 
 
