--- a/data_sharing/static/css/style.css
+++ b/data_sharing/static/css/style.css
@@ -80,7 +80,7 @@ a{
 #datasets-content{
 	position:relative;
 	width: 100%;
-    height: 220px;
+    height: 320px;
     overflow-y: scroll;
     //background-color: darkgrey;
     padding: 5px;
@@ -169,5 +169,32 @@ a{
 
 .info:hover{
 	cursor: pointer;
+}
+
+#png{
+	margin-top: 10px;
+    width: 100%;
+    //height: 29px;
+    border: 3px solid rgba(255,255,255,0.8);
+    background-image: url(../img/download.png);
+    background-size: 20px;
+    background-repeat: no-repeat;
+    background-position: 7px;
+    background-color: rgba(0,60,136,.5);
+    border-radius: 4px;
+    padding: 5px;
+    padding-left: 37px;
+    color:white;
+    text-align: left;
+    font-size: 14px;
+}
+
+#png:hover{
+	background-color: rgba(0,60,136,0.9);
+	cursor: pointer;
+}
+
+#attribution{
+	display: none;
 }
 
