--- a/data_sharing/templates/layout.html
+++ b/data_sharing/templates/layout.html
@@ -21,25 +21,24 @@
 
 <!-- Navbar comes here -->
 <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-  <a class="navbar-brand" href="#" style="font-family: 'PT Serif', serif; padding-left:55px;">IceExplorer <img src="{{ url_for('static', filename='img/logo.png') }}" style="height: 30px;"> |</a>
+  <a class="navbar-brand" href="/" style="font-family: 'PT Serif', serif; padding-left:55px;">IceExplorer <img src="{{ url_for('static', filename='img/logo.png') }}" style="height: 30px;"> |</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
-       <li class="nav-item">
-        <a class="nav-link" href="#">Map</a>
+       <li
+       {% if request.path == "/" %} class="active" {% endif %} >
+        <a class="nav-link" href="/">Map</a>
       </li>   
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+      <li {% if request.path == '/about' %}class="active"{% endif %}>
+        <a class="nav-link" href="/about">About</a>
       </li>   
     </ul>
   </div>  
 </nav>
 
-
-
-{% block content %}{% endblock %}
+{% block content %} {% endblock %}
 
 
 <div id="footer">Map created by Livia Jakob | 2018
