Changed data structure and enabled dates for layers

--- a/data_sharing/templates/main.html
+++ b/data_sharing/templates/main.html
@@ -89,10 +89,10 @@
 	   	
 	   	<div style="padding-top: 65px">
 	   	<hr>
-	   	<h6>Legend  <span class="info-button" data-toggle="tooltip" data-placement="right" title="Legend of the top visible layer"></span></h6>
+	   	<h6>Legend  <span class="info-button" data-toggle="tooltip" data-placement="right" title="Legend of the top visible layer. Click on the legend to get the value of a specific colour"></span></h6>
 	   	
-	   	   <div id="legend-content">
-		   <canvas width="150px" height=64px id="legend-bar"></canvas>
+	   	   <div id="legend-content" >
+		   <canvas width="150px" height=64px id="legend-bar" data-toggle="tooltip" data-placement="bottom" title=""></canvas>
 		   </div>
 	   	
 	   </div>
