--- a/data_sharing/templates/main.html
+++ b/data_sharing/templates/main.html
@@ -13,6 +13,11 @@
 	<script src="{{url_for('static', filename='js/ol-layerswitcher.js')}}"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.3/FileSaver.min.js"></script>
 	
+	<!-- Chart -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+	
+	
 
 
 
@@ -54,15 +59,11 @@
     <div id="display-pages"></div>
     </div>
         <div id="scroll-icon">&#8597;</div>
-     
     </div>
 
-	
-	
-	
-	
 	<div class="text"><button id="png">Download view as PNG</button>
 	
+
 
 <div id="attribution"></div>
 	</div>
@@ -120,7 +121,7 @@
       <button type="button">Search</button>
     </div-->
 
-<div id="mouse-position">Mouse Position:
+<div id="mouse-position" class="maptool">Mouse Position:
 </div>
 
 
