--- a/data_sharing/templates/layout.html
+++ b/data_sharing/templates/layout.html
@@ -5,8 +5,18 @@
     <meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favi.ico') }}" type="image/x-icon">
+    
+    
 
     <script src="{{url_for('static', filename='js/jquery.js')}}"></script>
+    
+    <!-- Timerangeslider before Bootstrap to not overwrite the styles-->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	<script src="{{url_for('static', filename='js/jQRangeSlider-5.7.2/jQDateRangeSlider-min.js')}}"></script>
+	<link rel="stylesheet" type=text/css href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
+	<link rel="stylesheet" type=text/css href="{{url_for('static', filename='js/jQRangeSlider-5.7.2/css/iThing.css')}}">
+	
+	
   <!-- Bootstrap --> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
