--- a/data_sharing/templates/main.html
+++ b/data_sharing/templates/main.html
@@ -8,7 +8,7 @@
 	
 	<!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
-	<script src="https://openlayers.org/en/v4.6.4/build/ol.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/4.6.5/ol.js"></script>
 
 	<script src="{{url_for('static', filename='js/ol-layerswitcher.js')}}"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.3/FileSaver.min.js"></script>
@@ -17,8 +17,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 	
-	
-
 
 
 	<link rel="stylesheet" type=text/css href="{{url_for('static', filename='css/ol-layerswitcher.css')}}">
@@ -37,17 +35,25 @@
     <div id="side-content">
     
     <div class="text" style="background-color: lightsteelblue; border-radius: 7px;">
-    <p>It is <b>cool</b> in here || Welcome to the IceExplorer</p>   
+    <p>Welcome to the IceExplorer</p>   
     </div>
     <div id="datasets">
     <div id=datasets-bar>
     Datasets   
-    <div class="info-button" data-toggle="tooltip" data-placement="top" title="Search or filter datasets and their layers."></div>
-    <div id="layertypes" class="small"><b>Layertypes: </b></div>
-    <input type="text" id="myInput" onkeyup="filterDatasets()" placeholder="Search for datasets..." title="Type in keywords">
+    <div class="info-button" data-toggle="tooltip" data-placement="top" title="Filter datasets in the box below."></div>
     
-    <hr>
+
+    <div id="filterby" class="collapse show">
+    	<div class="small" id="timerange-outer"><div id="timerange"></div>
+    	<input data-toggle="tooltip" data-placement="bottom" title="Click here to enable or disable filter by time functionality" id="bytime" type="checkbox" name="filterbytime" value="Time"> Filter by Time</div>
+    	<div class="small"><select id="layertypes"></select>
+    	<button id='filterDatasets' data-toggle="tooltip" data-placement="top" title="Filter datasets by layertype and time.">Filter Datasets</button></div>
+    
     </div>
+    <div id="collapse-btn"><button data-toggle="collapse" data-target="#filterby">&times;</button></div>
+    
+    </div>
+    <hr><hr>
     <div id="datasets-content">
     
     <div id="total-result"></div>
@@ -62,13 +68,19 @@
     </div>
 
 	<div class="text"><button id="png">Download view as PNG</button>
-	
-
-
-<div id="attribution"></div>
 	</div>
 
+	<div class="text" style="padding-top: 15px;">
+	<h5 style="margin-left: -4px;">Project supported by</h5>
+	<hr style="margin-left: -4px;  margin-bottom: 7px;" class="head">
 	
+	<a href="https://www.ed.ac.uk/"><img class="logo-small" src="{{ url_for('static', filename='img/logo_ed.png') }}" alt="University of Edinburgh"></img></a>
+	<a href="https://www.esa.int"><img class="logo-small" src="{{ url_for('static', filename='img/logo_esa.png') }}" alt="ESA"></img></a>
+	<a href="https://cryotop-evolution.org/"><img class="logo-small" src="{{ url_for('static', filename='img/logo_cryo.png') }}"alt="CryoTop Evolution"></img></a>
+	
+	</div>
+	
+	<div id="attribution"></div>
     </div> <!-- end side-content -->
     </div> <!-- end side -->
     
@@ -131,8 +143,9 @@
  <script src="{{url_for('static', filename='js/mapstyles.js')}}"></script>
  <script src="{{url_for('static', filename='js/map.js')}}"></script>
   <script src="{{url_for('static', filename='js/controls.js')}}"></script>
+  <script src="{{url_for('static', filename='js/sidebar-display.js')}}"></script>
     <script src="{{url_for('static', filename='js/show-dataset.js')}}"></script>
- <script src="{{url_for('static', filename='js/sidebar-display.js')}}"></script>
+
 <script src="{{url_for('static', filename='js/export.js')}}"></script>
 <script src="{{url_for('static', filename='js/swipe.js')}}"></script>
 <script src="{{url_for('static', filename='js/explore.js')}}"></script>
